<resources>
    <string name="app_name">VisitsShop</string>
    <string name="login_user_hint">请输入用户名</string>
    <string name="login_btn_text">登录</string>
    <string name="login_pwd_hint">请输入密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_home">首页</string>
    <string name="txt_shop">巡店</string>
    <string name="txt_visit">拜访</string>
    <string name="txt_train">培训</string>
    <string name="txt_me">个人中心</string>

    <!--Bottom-->
    <dimen name="bottom_img_padding">6dip</dimen>
    <dimen name="bottom_img_left">24dp</dimen>
    <dimen name="bottom_text_size">11sp</dimen>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
